# nfl-vis

./: .gitignore  README.md
client/: index.html  package-lock.json  package.json
client/src/: index.tsx
client/src/components/bespoke/possible-yardage/: possible-yardage-provider.tsx  possible-yardage.tsx
client/src/components/dataviz/: utils.ts
client/src/components/dataviz/types/: axes.ts
client/src/components/layout/bipanel/: bipanel.tsx
client/src/styles/: nfl.scss
client/src/types/: possible-yards.ts
service/: pyproject.toml
service/datascience/: pbp-2024-preview.ipynb
service/datascience/data/: game_drive_summary_2024.pq  pbp-2024.csv
service/src/: __init__.py
service/src/app/: app.py
service/src/app/games/summaries/: router.py
